Fixing the getFisrt function to Java 17